--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
 alembic==1.10.2
 anyio==3.6.2
+astroid==2.15.0
+autopep8==2.0.2
 certifi==2022.12.7
 click==8.1.3
+dill==0.3.6
 dnspython==2.3.0
 email-validator==1.3.1
 fastapi==0.93.0
@@ -11,23 +14,34 @@ httpcore==0.16.3
 httptools==0.5.0
 httpx==0.23.3
 idna==3.4
+isort==5.12.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
+lazy-object-proxy==1.9.0
 Mako==1.2.4
 MarkupSafe==2.1.2
+mccabe==0.7.0
 orjson==3.8.7
+platformdirs==3.1.0
 psycopg2==2.9.5
+pycodestyle==2.10.0
 pydantic==1.10.6
+pydocstyle==6.3.0
+pylint==2.17.0
 python-dotenv==1.0.0
 python-multipart==0.0.6
 PyYAML==6.0
 rfc3986==1.5.0
 sniffio==1.3.0
+snowballstemmer==2.2.0
 SQLAlchemy==2.0.5.post1
 starlette==0.25.0
+tomli==2.0.1
+tomlkit==0.11.6
 typing_extensions==4.5.0
 ujson==5.7.0
 uvicorn==0.20.0
 uvloop==0.17.0
 watchfiles==0.18.1
 websockets==10.4
+wrapt==1.15.0
